Mon Oct 13 07:54:00 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.c (proc_options): add -U command line option to specify
	  utf-8 as default_internal.

Mon Oct 13 07:42:57 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* transcode.c (str_transcode0): String#encode() with no encoding
	  specified transcode the string into Encoding.default_internal.
	  inspired by [ruby-core:19298].

Sun Oct 12 18:00:18 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (set_ole_codepage, ole_cp2encoding,
	  ole_wc2mb, ole_vstr2wc, ole_mb2wc): support CP51932 (only mswin32).

	* test/win32ole/test_win32ole.rb: ditto.

Sun Oct 12 12:03:38 2008  Koichi Sasada  <ko1@atdot.net>

	* vm.c, vm_insnhelper.h (ruby_vm_redefined_flag): apply optimization
	  patch proposed by Paul Brannan.  [ruby-core:19171]

Sun Oct 12 09:46:36 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* strftime.c (rb_strftime): suppressed warnings on cygwin.

Sat Oct 11 19:49:35 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_prepare): use utf-8 encoding directly.

Sat Oct 11 10:20:17 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (CLEANINGS): uses escaped form tabs to preventing the
	  confusion.  [ruby-talk:317345]

Sat Oct 11 08:51:13 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rake.rb (Rake::Application#standard_exception_handling): removed
	  unnecessary SystemExit, and exits with false instead of system
	  dependent value.  [ruby-talk:317330]

Sat Oct 11 03:54:05 2008  Koichi Sasada  <ko1@atdot.net>

	* parse.y: optimize 'for' statement when one variable given.

	* benchmark/bm_loop_for.rb: added.

	* benchmark/bm_loop_times.rb: modified.

Sat Oct 11 12:09:05 2008  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv/csv.rb:  Added support for Encoding::default_internal.
	* lib/csv/csv.rb:  Switched to new Hash syntax.

Fri Oct 10 22:16:55 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (comment_at_top): needed for ripper too.